增加文件导入导出

--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -24,7 +24,7 @@
 	<!-- 顶部开始 -->
 	<div class="container">
 		<div class="logo">
-			<a href="index.html">教师系统</a>
+			<a href="index.html">网信安全考试系统-教师</a>
 		</div>
 		<div class="left_open">
 			<a><i title="展开左侧栏" class="iconfont">&#xe699;</i></a>
@@ -59,13 +59,14 @@
 
 		<div id="side-nav">
 			<ul id="nav">
-				<li>
+				<!--  <li>
 					<a onclick="xadmin.add_tab('首页','teacher/score_chart.html')" href="javascript:;">
 						<i class="iconfont left-nav-li" lay-tips="首页">&#xe696;</i>
 						<cite>首页</cite>
 						<i class=""></i>
 					</a>
 				</li>
+                -->
 				<li>
 					<a onclick="xadmin.add_tab('题库管理','teacher/shi_ti_manager.html')" href="javascript:;">
 						<i class="iconfont left-nav-li" lay-tips="题库管理">&#xe696;</i>
@@ -76,14 +77,14 @@
 				<li>
 					<a onclick="xadmin.add_tab('试卷管理','teacher/shi_juan_manager.html')" href="javascript:;">
 						<i class="iconfont left-nav-li" lay-tips="试卷管理">&#xe6a2;</i>
-						<cite>试卷题目管理</cite>
+						<cite>试卷管理</cite>
 						<i class=""></i>
 					</a>
 				</li>
 				<li>
-					<a onclick="xadmin.add_tab('教师评分','teacher/ping-feng.html')" dialog=0 href="javascript:;">
-						<i class="iconfont left-nav-li" lay-tips="教师评分">&#xe6b2;</i>
-						<cite>教师评分</cite>
+					<a onclick="xadmin.add_tab('成绩查看','teacher/ping-feng.html')" dialog=0 href="javascript:;">
+						<i class="iconfont left-nav-li" lay-tips="成绩查看">&#xe6b2;</i>
+						<cite>成绩查看</cite>
 						<i class=""></i></a>
 				</li>
 				<!-- <li>
