--- a/templates/html/teacher/shi_ti_manager.html
+++ b/templates/html/teacher/shi_ti_manager.html
@@ -39,53 +39,52 @@
 				</script>
 			</select>
 		</div>
+		<button type="button" class="layui-btn" id="uploadSubjectFile"><i class="layui-icon"></i>导入题库</button>
 	</form>
 
-
-
-	<table class="layui-hide" id="demo" lay-filter="test"></table>
-
+	<table class="layui-hide" id="demo" lay-filter="test">
+	</table>
+	
+	<script type="text/html" id="toolbarDemo">
+		<div class="layui-btn-container">
+		  <button class="layui-btn layui-btn-sm" lay-event="addSubject">添加题目</button>
+		  <button class="layui-btn layui-btn-sm" lay-event="deleteSubjects">删除多项</button>
+		  
+		</div>
+	</script>
 	<script type="text/html" id="barDemo">
-			<!-- <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a> -->
-	<a class="layui-btn layui-btn-xs" lay-event="add">加入试卷</a>
-	<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+		<a class="layui-btn layui-btn-xs" lay-event="add">加入试卷</a>
+		<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 	</script>
 
-	<table class="layui-hide" id="demo" lay-filter="test">
 
-
-	</table>
 
 	<script src="../../config.js" type="text/javascript" charset="utf-8"></script>
-
+	<script src="../../js/utils.js"></script>
 
 	<script>
-		layui.config({
-			version: '1615206508080' //为了更新 js 缓存，可忽略
-		});
-
 		layui.use(['laytpl', 'laydate', 'laypage', 'layer', 'table', 'carousel', 'upload', 'element', 'slider', 'form'], function () {
-
 			var laydate = layui.laydate //日期
-				,
-				laypage = layui.laypage //分页
-				,
-				layer = layui.layer //弹层
-				,
-
-				table = layui.table //表格
-				,
-				carousel = layui.carousel //轮播
-				,
-				upload = layui.upload //上传
-				,
-				element = layui.element //元素操作
-				,
-				slider = layui.slider, //滑块
-				laytpl = layui.laytpl,
-				flow = layui.flow,
-				form = layui.form
-
+				,laypage = layui.laypage //分页
+				,layer = layui.layer //弹层
+				,table = layui.table //表格
+				,carousel = layui.carousel //轮播
+				,upload = layui.upload //上传
+				,element = layui.element //元素操作
+				,slider = layui.slider //滑块
+				,laytpl = layui.laytpl
+				,flow = layui.flow
+				,form = layui.form
+			//指定允许上传的文件类型
+			upload.render({
+				elem: '#uploadSubjectFile'
+				,url: getHost() + '/courses/subjects' //此处配置你自己的上传接口即可
+				,accept: 'file' //普通文件
+				,done: function(res){
+					layer.msg(res.msg);
+				}
+			});
+			// 获取试卷数据
 			$.get(getHost() + "/courses/list_translate_class", {
 			}, function (data, status) {
 				if (data.code == 0) {
@@ -110,8 +109,6 @@
 				});
 			});
 			renderData();
-
-
 			function renderData() {
 				//执行一个 table 实例
 				table.render({
@@ -121,13 +118,23 @@
 					url: getHost() + '/courses/subjects', //数据接口
 					// url: 'date_test.json',
 					title: '用户表',
-					toolbar: 'default', //开启工具栏，此处显示默认图标，可以自定义模板，详见文档
+					// toolbar: 'default', //开启工具栏，此处显示默认图标，可以自定义模板，详见文档
+					defaultToolbar: ['filter', 'exports', 'print', { //自定义头部工具栏右侧图标。如无需自定义，去除该参数即可
+						title: '提示',
+						layEvent: 'LAYTABLE_TIPS',
+						icon: 'layui-icon-tips'
+					}],
 					cellMinWidth: 80, //全局定义所有常规单元格最小宽度,
 					parseData: function (res) {
 						subject_name: res.data
 					},
-					cols: [
-						[{
+					cols: [[
+						{
+							type: 'checkbox',
+							fixed: 'left',
+							width: 100
+						},
+						{
 							align: 'center',
 							title: '编号',
 							sort: true,
@@ -149,20 +156,20 @@
 							// edit: 'text',
 							sort: true,
 							align: 'center',
-							templet: '<div>{{d.fields.subject_name}}</div>'
-						},{
+							templet: '<div>{{d.subject_name}}</div>'
+						}, {
 							field: 'type',
-							title: '题目',
+							title: '题目类型',
 							sort: true,
 							align: 'center',
-							templet: '<div>{{# if (d.fields.type == 0) { }}单选题{{# } else if(d.fields.type == 1) { }}多选题{{# } else if(d.fields.type == 2) { }}判断题{{# } }} </div>'
+							templet: '<div>{{# if (d.type == 0) { }}单选题{{# } else if(d.type == 1) { }}多选题{{# } else if(d.type == 2) { }}判断题{{# } }} </div>'
 						}, {
 							field: 'subject_unswer',
 							title: '答案',
 							// edit: 'text',
 							sort: true,
 							align: 'center',
-							templet: '<div>{{d.fields.subject_unswer}}</div>'
+							templet: '<div>{{d.subject_unswer}}</div>'
 						}, {
 							field: 'score',
 							title: '分数',
@@ -171,7 +178,7 @@
 							totalRow: true,
 							align: 'center',
 							width: 100,
-							templet: '<div>{{d.fields.score}}</div>'
+							templet: '<div>{{d.score}}</div>'
 						}, {
 							fixed: 'right',
 							title: '操作',
@@ -183,69 +190,49 @@
 					page: true, //开启分页
 				});
 			}
-
+			
 			//监听头工具栏事件
 			table.on('toolbar(test)', function (obj) {
 				var checkStatus = table.checkStatus(obj.config.id),
 					data = checkStatus.data; //获取选中的数据
 				switch (obj.event) {
-					case 'add':
+					case 'addSubject':
 						setTop();
 						break;
-					case 'update':
-						layer.alert('请单击表格，修改对应信息，修改之后按回车');
-						break;
-					case 'delete':
+					case 'deleteSubjects':
 						if (data.length === 0) {
-							layer.msg('请在右侧删除');
+							layer.msg('请勾选题目');
 						} else {
 							layer.confirm('确定删除选中的数据吗？', {
 								icon: 3,
 								title: '提示信息'
 							}, function (index) {
-								//layui中找到CheckBox所在的行，并遍历找到行的顺序
-								$('div.layui-table-body table tbody input[name="layTableCheckbox"]:checked')
-									.each(function () {
-										var ids = "";
-										for (var i = 0; i < data.length; i++) {
-											if (i == data.length - 1) {
-												ids += data[i].id
-											} else {
-												ids += data[i].id + ",";
-											}
-										}
+								let ids = [];
+								for (var i = 0; i < data.length; i++) {
+									ids.push(data[i].pk)
+								}
+								myRequest('/courses/subjects', 'DELETE', {"pks": JSON.stringify(ids)}, function (rs) {
+									//删除对应行（tr）的DOM结构
+									//layui中找到CheckBox所在的行，并遍历找到行的顺序
+									$('div.layui-table-body table tbody input[name="layTableCheckbox"]:checked')
+										.each(function () {
 										// 遍历选中的checkbox
-										n = $(this).parents('tbody tr')
-											.index() // 获取checkbox所在行的顺序
+										// 获取checkbox所在行的顺序
+										n = $(this).parents('tbody tr').index() 
 										//移除行
-										$('div.layui-table-body table tbody ')
-											.find('tr:eq(' +
-												n + ')').remove()
+										$('div.layui-table-body table tbody ').find('tr:eq(' + n + ')').remove()
 										//如果是全选移除，就将全选CheckBox还原为未选中状态
 										$('div.layui-table-header table thead div.layui-unselect.layui-form-checkbox')
 											.removeClass('layui-form-checked')
-
-										$.post(getHost() + "/delete_all_projects_undertaken", {
-											deleteData: ids
-										}, function (data, status) {
-											if (data.code == 0) {
-												layer.msg("删除成功");
-											} else {
-												layer.msg("已经删除，请刷新页面");
-											}
-										}).error(function () {
-											layer.msg("请检查网络后重试");
-										});
 									})
-								layer.close(index)
+									layer.close(index)
+								});
 							})
-
-
 						}
 						break;
 				};
 			});
-			// 添加弹窗
+			// 添加题目弹窗
 			function setTop() {
 				var that = this;
 				//多窗口模式，层叠置顶
@@ -279,23 +266,20 @@
 				});
 			}
 
-			//监听行工具事件
-			table.on('tool(test)', function (obj) { //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
-				var data = obj.data, // 获得当前行数据
+			// 监听每行工具事件
+			table.on('tool(test)', function (obj) { 
+				//注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
+				// 获得当前行数据
+				var data = obj.data, 
 					layEvent = obj.event; //获得 lay-event 对应的值
-				if (layEvent === 'detail') {
-					layer.msg('查看操作');
-				} else if (layEvent === 'add') {
+				if (layEvent === 'add') {
 					kao_shi_type = $("#selectview").val()
 					if (!kao_shi_type) {
 						layer.msg("请选择试卷")
 						return false
 					}
 					layer.confirm('是否将该题加入' + $("#selectview").find("option:selected").text(), function (index) {
-						// obj.del(); //删除对应行（tr）的DOM结构
-						// layer.close(index);
-
-						//向服务端发送删除指令
+						//向服务端发送添加题目
 						$.post(getHost() + "/courses/add_translate", {
 							translate_class_id: kao_shi_type,
 							subject_id: data.pk
@@ -305,7 +289,6 @@
 							} else {
 								layer.msg(data.msg)
 							}
-
 						}).error(function () {
 							layer.msg("添加失败");
 						});
@@ -313,19 +296,14 @@
 					// 弹窗，
 				} else if (layEvent === 'del') {
 					layer.confirm('真的删除行么', function (index) {
-						obj.del(); //删除对应行（tr）的DOM结构
-						layer.close(index);
-						//向服务端发送删除指令
-						$.post(getHost() + "/courses/del_subjects/" + data.pk, {
-							id: data.id
-						}, function (data, status) {
-							layer.msg('删除成功');
-						}).error(function () {
-							layer.msg("请检查网络后重试");
-						});
+						let pks = []
+						pks.push(data.pk)
+						myRequest('/courses/subjects', 'DELETE', {"pks": JSON.stringify(pks)}, function (rs) {
+							//删除对应行（tr）的DOM结构
+							obj.del();
+							layer.close(index);
+                    	});
 					});
-				} else if (layEvent === 'edit') {
-					layer.msg('编辑操作');
 				}
 			});
 
