--- a/templates/html/edit/shi-juan-class-edit.html
+++ b/templates/html/edit/shi-juan-class-edit.html
@@ -36,7 +36,22 @@
                 </select>
             </div>
         </div>
-
+        <div class="layui-form-item">
+            <div class="layui-inline">
+                <label class="layui-form-label">开始时间</label>
+                <div class="layui-input-inline">
+                    <input name="start_time" type="text" class="layui-input" id="start_time" placeholder="yyyy-MM-dd HH:mm:ss">
+                </div>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <div class="layui-inline">
+                <label class="layui-form-label">结束时间</label>
+                <div class="layui-input-inline">
+                    <input name="end_time" type="text" class="layui-input" id="end_time" placeholder="yyyy-MM-dd HH:mm:ss">
+                </div>
+            </div>
+        </div>
         <div class="layui-form-item">
             <div class="layui-input-block">
                 <button type="submit" class="layui-btn" lay-submit="" lay-filter="demo1">立即提交</button>
@@ -54,7 +69,16 @@
                 laytpl = layui.laytpl,
                 laydate = layui.laydate;
 
-            
+            //日期时间选择器
+            laydate.render({
+                elem: '#start_time'
+                , type: 'datetime'
+            });
+                        //日期时间选择器
+            laydate.render({
+                elem: '#end_time'
+                , type: 'datetime'
+            });
 
             $.get(getHost() + "/courses/classes", {
             }, function (data, status) {
